--- a/src/app/modules/app/app.component.html
+++ b/src/app/modules/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<ng-container *ngIf="viewportBreakpoint !== 'desktop'">
+    <main class="mobile-page-content">
+        <router-outlet></router-outlet>
+    </main>
+    <nav-mobile [navSubject]="mobileNavSubject"></nav-mobile>
+    <app-bar [navSubject]="mobileNavSubject"></app-bar>
+</ng-container>
