--- a/src/assets/css/definitions.scss
+++ b/src/assets/css/definitions.scss
@@ -1,11 +1,3 @@
-$nav-width-default: 260px;
-$nav-width-minimized: 74px;
-$color-nav-default: #d1d9eb;
-$panel-height: 40px;
-$action-panel-height: 54px;
-$sidebar-width: 280px;
-$mobile-tabs-height: 40px;
-
 $color-link-primary: #5388de;
 $color-primary-green: #41a741;
 $color-primary-red: #e64f4f;
@@ -31,24 +23,15 @@ $control-height-regular: 34px;  // TODO: add medium, large; Add to buttons
 $control-height-large: 40px;
 $control-border-size: 1px;  // TODO: add to buttons
 
-$font-default-family: 'TNP-Montserrat' 'Roboto', 'Open Sans', -apple-system, BlinkMacSystemFont, Helvetica Neue, Arial, Tahoma, sans-serif;
-$font-weight-thin: 100;
+$font-default-family: 'TNP-Montserrat', 'Roboto', 'Open Sans', -apple-system, BlinkMacSystemFont, Helvetica Neue, Arial, Tahoma, sans-serif;
+$font-weight-extra-light: 200;
 $font-weight-light: 300;
 $font-weight-medium: 500;
+$font-weight-semi-bold: 600;
+$font-weight-extra-bold: 800;
 $font-weight-black: 900;
 
-$z-index-max:                   2147483647;
-$z-index-toasts:                6000;
-$z-index-popup:                 5000;
-$z-index-tab-hint:              3000;
-$z-index-sidebar-mobile-active: 2400; // -----+
-$z-index-nav-mobile-active:     2400; // --+  |
-$z-index-panel:                 2300; //   |  |
-$z-index-tabs:                  2250; //   |  |
-$z-index-nav:                   2200; // --+  |
-$z-index-action-panel:          2100; //      |
-$z-index-sidebar:               2000; // -----+
-$z-index-dropdown:              1000;
-$z-index-menu:                  100;  // relative?
+$app-bar-height: 56px;
 
-$z-index-control-active: 7;
+$z-index-app-bar: 5000;
+$z-index-mobile-nav: 7000;
