--- a/src/app/modules/app/app-bar/app-bar.component.html
+++ b/src/app/modules/app/app-bar/app-bar.component.html
@@ -1,5 +1,8 @@
-<button type="button" class="app-bar__nav-trigger" (click)="onTriggerClick()">
+<button type="button" class="app-bar__nav-trigger" [class.app-bar__nav-trigger_has-dot]="hasTermsDot" (click)="onTriggerClick()">
     <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" viewBox="0 0 18 18">
         <path style="fill: currentColor;" d="M0,13 L0,13 L18,13 L18,15 L0,15 ZM0,8 L18,8 L18,10 L0,10 L0,8 ZM0,3 L18,3 L18,5 L0,5 L0,3 Z"></path>
     </svg>
 </button>
+<div class="app-bar__title" [innerHTML]="title"></div>
+<!--<div class="app-bar__controls"></div>-->
+
