--- a/src/assets/css/definitions.scss
+++ b/src/assets/css/definitions.scss
@@ -32,6 +32,8 @@ $font-weight-extra-bold: 800;
 $font-weight-black: 900;
 
 $app-bar-height: 56px;
+$content-max-width: 1000px;
 
 $z-index-app-bar: 5000;
+$z-index-panel: 5000;
 $z-index-mobile-nav: 7000;
