--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -8,3 +8,16 @@
 @import './buttons.scss';
 @import './inputs.scss';
 @import './select.scss';
+
+.page-header {
+    display: none;
+    color: #656e7d;
+    font-size: 24px;
+    line-height: 38px;
+    font-weight: $font-weight-semi-bold;
+    margin-bottom: 20px;
+
+    html.viewport_desktop & {
+        display: block;
+    }
+}
