--- a/src/assets/css/animations.scss
+++ b/src/assets/css/animations.scss
@@ -35,6 +35,51 @@
     50%      { transform: scale(4); }
 }
 
+@-webkit-keyframes pulse {
+    0% {
+        transform: scale(0.2);
+        opacity: 0;
+    }
+    33% {
+        transform: scale(0.6);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.2);
+        opacity: 0;
+    }
+}
+
+@-moz-keyframes pulse {
+    0% {
+        transform: scale(0.2);
+        opacity: 0;
+    }
+    33% {
+        transform: scale(0.6);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.2);
+        opacity: 0;
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.2);
+        opacity: 0;
+    }
+    33% {
+        transform: scale(0.6);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.2);
+        opacity: 0;
+    }
+}
+
 
 // Clock dots
 // ----------------------
