--- a/src/assets/css/buttons.scss
+++ b/src/assets/css/buttons.scss
@@ -129,9 +129,9 @@ a#{$button-root-selector}:visited {
 
     $sizes: (
         //           1     2  3     4     5                    6     7    8
-        'regular':  (34px, 0, 16px, 14px, $font-weight-medium, 18px, 6px, 22px),
-        'medium':   (40px, 0, 20px, 15px, $font-weight-medium, 20px, 7px, 26px),
-        'large':    (46px, 0, 24px, 16px, $font-weight-medium, 22px, 8px, 30px)
+        'regular':  (38px, 0, 16px, 14px, $font-weight-semi-bold, 18px, 6px, 22px),
+        'medium':   (40px, 0, 20px, 15px, $font-weight-semi-bold, 20px, 7px, 26px),
+        'large':    (46px, 0, 24px, 16px, $font-weight-semi-bold, 22px, 8px, 30px)
     );
 
     @each $size, $value in $sizes {
