--- a/src/app/modules/app/terms/terms.component.html
+++ b/src/app/modules/app/terms/terms.component.html
@@ -5,14 +5,16 @@
     <ng-container *ngSwitchCase="true">
         <div class="terms__content" [innerHTML]="content" #contentEl [style.paddingBottom.px]="contentBottomPadding"></div>
         <div class="terms-panel" *ngIf="isAcceptable" #panelEl [style.bottom.px]="panelBottom" [class.terms-panel_sticky]="isPanelSticky">
-            <checkbox [(ngModel)]="isChecked" [disabled]="isSubmitting">I accept Terms & Conditions and Privacy policy</checkbox>
+            <checkbox [(ngModel)]="isChecked" [disabled]="isSubmitting">
+                {{ 'terms.form.i_accept' | translate }}
+            </checkbox>
             <div class="terms-panel__button">
                 <button type="button" class="button button_blue button_regular"
                     [isDisabled]="!isChecked || isSubmitting"
                     [isProgress]="isSubmitting"
                     (click)="onSubmit()"
                 >
-                    <span class="button__caption">Ok</span>
+                    <span class="button__caption">{{ 'terms.form.send' | translate }}</span>
                 </button>
             </div>
         </div>
